<resources>
    <string name="app_name">NuevoLeonTravel</string>

    <string name="configuracion">Configuration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_inicio">Home</string>
    <string name="nav_quehacer">What to do?</string>
    <string name="nav_transporte">Extraordinary Tours</string>
    <string name="nav_hoteles">Hotels</string>
    <string name="nav_eventos">Events</string>
    <string name="nav_cuenta">Account</string>
    <string name="nav_ajustes">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="quehacer_title">What to do?</string>
    <string name="quehacer_description">Enjoy a variety of special activities.</string>
    <string name="quehacer_action">Explore</string>

    <string name="aventura">Adventure Tours</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="paseos_title">Extraordinary tours</string>
    <string name="paseos_description">Enjoy walks four different destinations and tourist attractions where live extraordinary experiences.</string>
    <string name="paseos_action">Discover</string>

    <string name="hoteles_title">Hotels</string>
    <string name="hoteles_description">You  will certainly find a place to stay in Nuevo Leon with the services and commodities you need.</string>
    <string name="hoteles_action">Search</string>

    <string name="eventos_title">Events</string>
    <string name="eventos_action">Browse</string>

    <string name="golfHerradura_name">Golf Club "La Herradura"</string>
    <string name="golfHerradura_phone">+52 (81) 81041040</string>
    <string name="golfHerradura_website">www.laherradura.com.mx</string>
    <string name="golfHerradura_address">Carretera Nacional km 266 Av. Portal del Huajuco, La Herradura, 64890 Monterrey, N.L.</string>
    <string name="golfHerradura_description">La Herradura was made to bring joy, comfort and exclusivity to families. Deep in the natural beauty that is the Huajuco Canyon, La Herradura is surrounded by lakes, mountains and more than 600,000 m of green areas.</string>

    <string name="estadioTec_name">Tecnológico Stadium</string>
    <string name="estadioTec_phone">+52 (81) 83582000</string>
    <string name="primera_vez">Is this your first time in Nuevo León?</string>
    <string name="estadioTec_website">www.itesm.mx</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="more">More</string>

    <string name="estadioTec_address">Junco de la Vega S/N, Tecnológico, Monterrey, Nuevo León, México. CP. 64849.</string>
    <string name="estadioTec_description">The Tecnológico stadium was opened july 17, 1950 by mexican presiden Miguel Alemán Valdés. The original construction had a 19,000 people capacity, it was then extended to 35,000 in 1965. In 1986, the stadium was home of the World Cup celebrated in Mexico. Today it hosts important soccer matches and college footbal team "Borregos Salvajes" from Tec de Monterrey, Campus Monterrey.</string>

    <string name="festival_desc">Every big city has its own festival. Monterrey´s hosts the International Santa Lucía Festival, you can find art and culture from other contries.</string>

    <string name="paseos_extraordinarios">Extraordinary Tours</string>
    <string name="paseo_norte">North Tour</string>
    <string name="paseo_norte_des">A walk that combines representative sites for its historical heritage, landscapes and natural parks.</string>
    <string name="conoce_mas">more</string>
    <string name="paseo_magico">Magical Tour</string>
    <string name="paseo_magico_des">Un paseo en el cual te sorprenderás con la riqueza cultural de Santiago y Linares, Municipios declarados Pueblos Mágicos.</string>
    <string name="paseo_sur">South Tour</string>
    <string name="paseo_sur_des">Un paseo para disfrutar el turismo de aventura en sus diversos y majestuosos atractivos naturales enclavados en una de las sierras montañosas que caracterizan al estado.</string>
    <string name="parques_extraordinarios">Extraordinary Parks</string>
    <string name="eventos_description">Here you will find the schedule with the most popular events in Nuevo León.</string>
    <string name="parques_extraordinarios_des">A walk through the most emblematic of the state parks. An extraordinary experience natural spaces that tell the story of millions of years of our planet.</string>
    <string name="event">Events</string>
    <string name="event_title">Santa Lucía Festival</string>

    <string name="response_saved">Response recorded</string>
    <string name="deportes">Sports</string>

</resources>
