<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jorgegilcavazos.nuevoleontravel.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/paseo_norte_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/norte_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/norte_card"/>

            <TextView
                android:id="@+id/norte_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/norte_image"
                android:text="@string/paseo_norte"
                android:padding="5dp"
                android:textColor="@color/primaryText"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/norte_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/norte_title"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:text="@string/paseo_norte_des"/>

            <Button
                android:id="@+id/norte_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/norte_description"
                android:text="@string/conoce_mas"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/paseo_magico_card"
        android:layout_below="@id/paseo_norte_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/magico_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/magico_card"/>

            <TextView
                android:id="@+id/magico_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/magico_image"
                android:text="@string/paseo_magico"
                android:padding="5dp"
                android:textColor="@color/primaryText"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/magico_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/magico_title"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:text="@string/paseo_magico_des"/>

            <Button
                android:id="@+id/magico_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/magico_description"
                android:text="@string/conoce_mas"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/paseo_sur_card"
        android:layout_below="@id/paseo_magico_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sur_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/sur_card"/>

            <TextView
                android:id="@+id/sur_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sur_image"
                android:text="@string/paseo_sur"
                android:padding="5dp"
                android:textColor="@color/primaryText"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/sur_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sur_title"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:text="@string/paseo_sur_des"/>

            <Button
                android:id="@+id/sur_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/sur_description"
                android:text="@string/conoce_mas"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/parques_card"
        android:layout_below="@id/paseo_sur_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/parques_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/parques_card"/>

            <TextView
                android:id="@+id/parques_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parques_image"
                android:text="@string/parques_extraordinarios"
                android:padding="5dp"
                android:textColor="@color/primaryText"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/parques_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parques_title"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:text="@string/parques_extraordinarios_des"/>

            <Button
                android:id="@+id/parques_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/parques_description"
                android:text="@string/conoce_mas"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
