<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jorgegilcavazos.nuevoleontravel.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/slide_image1"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <include layout="@layout/survey_card"
        android:id="@+id/survey_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_header"/>

    <android.support.v7.widget.CardView
        android:layout_below="@id/survey_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/card1_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/main_image"/>

            <TextView
                android:id="@+id/card1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/card1_image"
                android:text="@string/quehacer_title"
                android:padding="5dp"
                android:background="#80000000"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/card1_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1_image"
                android:padding="10dp"
                android:textColor="@color/secondaryText"
                android:textSize="16sp"
                android:text="@string/quehacer_description"/>

            <Button
                android:id="@+id/card1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/card1_description"
                android:text="@string/quehacer_action"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
