<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/interes_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/image_golf_herradura"/>

            <TextView
                android:id="@+id/interes_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interes_image"
                android:text="@string/golfHerradura_name"
                android:textSize="26sp"
                android:padding="5dp"
                android:textColor="@color/primaryText"/>

            <ImageView
                android:id="@+id/interes_star1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/interes_name"
                android:src="@drawable/ic_star_black_24dp" />

            <ImageView
                android:id="@+id/interes_star2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/interes_name"
                android:layout_toRightOf="@id/interes_star1"
                android:src="@drawable/ic_star_black_24dp" />

            <ImageView
                android:id="@+id/interes_star3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/interes_name"
                android:layout_toRightOf="@id/interes_star2"
                android:src="@drawable/ic_star_black_24dp" />

            <ImageView
                android:id="@+id/interes_star4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/interes_name"
                android:layout_toRightOf="@id/interes_star3"
                android:src="@drawable/ic_star_black_24dp" />

            <ImageView
                android:id="@+id/interes_star5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/interes_name"
                android:layout_toRightOf="@id/interes_star4"
                android:src="@drawable/ic_star_half_black_24dp" />

            <TextView
                android:id="@+id/interes_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interes_name"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="4.3/5"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/interes_phone_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/interes_star1"
                android:src="@drawable/ic_call_black_24dp"/>
            <TextView
                android:id="@+id/interes_phone"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/interes_phone_icon"
                android:layout_below="@id/interes_star1"
                android:text="@string/golfHerradura_phone"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/secondaryText"/>

            <ImageView
                android:id="@+id/interes_location_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/interes_phone_icon"
                android:src="@drawable/ic_location_on_black_24dp"/>
            <TextView
                android:id="@+id/interes_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interes_phone"
                android:layout_toRightOf="@id/interes_location_icon"
                android:text="@string/golfHerradura_address"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/secondaryText"/>
            <ImageView
                android:id="@+id/interes_web_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/interes_location_icon"
                android:src="@drawable/ic_language_black_24dp"/>

            <TextView
                android:id="@+id/interes_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interes_address"
                android:layout_toRightOf="@id/interes_web_icon"
                android:text="www.laherradura.com.mx"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/interes_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interes_website"
                android:text="@string/golfHerradura_description"
                android:textSize="14sp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/interes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/interes_description"
                android:text="guardar"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.CardView>
